# svdd

./: .gitignore  Cargo.toml
benches/: demo_algorithms.rs
docs/plans/: 2026-03-25-svdd-ast-reducer.md  2026-03-26-svdd-generic-performance-plan.md
duts/bugpoint_demo/: Makefile  compute_unit.sv  sv-bugpoint-check.sh
src/: check.rs  cli.rs  lib.rs  main.rs  metrics.rs  model.rs  parser.rs  profile.rs  render.rs  session.rs
src/algorithms/: ddmin.rs  hdd.rs  hddmin.rs  mod.rs  naive.rs
tests/: check.rs  cli_config.rs  ddmin.rs  hdd.rs  hddmin.rs  metrics.rs  naive.rs  parser_candidates.rs  render.rs  session_cache.rs  session_output.rs  session_validation.rs
