[package]
name = "svdd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
sv-parser = "0.13.4"
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }
predicates = "3"

[[bench]]
name = "demo_algorithms"
harness = false
